Try to fix overflow css performance

--- a/app/styles/base/_config.scss
+++ b/app/styles/base/_config.scss
@@ -90,4 +90,4 @@ $border-radius: 3px;
 $bar-height: 50px;
 $bar-border-size: 2px;
 $progress-height: 10px;
-$sidebar-width: 15rem;
+$sidebar-width: 20rem;
