--- a/app/styles/components/_aside.scss
+++ b/app/styles/components/_aside.scss
@@ -42,6 +42,7 @@
 	right: 0;
 	bottom: 0;
 	background-color: $overlay-color;
+	overflow-y: auto;
 }
 
 /**
@@ -50,33 +51,22 @@
 
 .Aside--navigation {
 	display: none;
-
 	position: fixed;
 	top: 0;
 	right: 0;
 	bottom: 0;
 	left: 0;
-
 	z-index: 6;
-
-	overflow-y: scroll;
 
 	.Aside-inner {
 		padding-top: 3.7rem;
 		padding-left: 1.8rem;
 		padding-right: 2rem;
-		overflow-y: scroll;
+	}
 
-		.Tabs {
-			width: 100%;
-			max-width: 15rem;
-			box-shadow: 0 1px 1rem rgba($gray, 0.5);
-		}
-
-		.Tabs-item,
-		.Btn {
-			width: 100%;
-		}
+	.Tabs {
+		max-width: 15rem;
+		box-shadow: 0 1px 1rem rgba($gray, 0.4);
 	}
 }
 
@@ -86,8 +76,7 @@
 	top: auto;
 	right: 0;
 	bottom: 0;
-	width: 20rem;
-	height: 100%;
+	width: $sidebar-width;
 
 	.Root.is-minimized & {
 		width: auto;
